tests/valid/global_variables/global.rs
/*
return: 7
*/

foo: int = 4;

main(): int {
    return foo + 3;
}