tests/invalid/global_variables/fun_redefined_as_var.rs
/*
fail: 1
*/

foo(): int {
    return 3;
}

foo: int = 4;

main(): int {
    return foo;
}